--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 go:
   - 1.7
   - 1.8
-go_import_path: go.uber.org/zap
+go_import_path: github.com/pavius/zap
 env:
   global:
     - GO15VENDOREXPERIMENT=1
